[gd_scene load_steps=2 format=3 uid="uid://duhhbxeauuj02"]

[ext_resource type="Script" uid="uid://be106n6cs1maj" path="res://scripts/remap_button.gd" id="1_hd0om"]

[node name="RemapButton" type="Button"]
custom_minimum_size = Vector2(0, 64)
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
script = ExtResource("1_hd0om")
action = "ui_left"

[node name="ActionLabel" type="Label" parent="."]
layout_mode = 2
anchor_top = 0.0625
anchor_right = 0.500391
anchor_bottom = 0.9375
theme_override_font_sizes/font_size = 24
text = "Action"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="KeyLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.500391
anchor_top = 0.0625
anchor_right = 0.994527
anchor_bottom = 0.9375
theme_override_font_sizes/font_size = 24
text = "'key'"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="." to="." method="_on_toggled"]
